Add prisma along with unit and e2e test

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@prisma/client": "^5.7.0",
     "axios": "^1.0.0",
     "express": "~4.18.1",
     "tslib": "^2.3.0",
@@ -32,6 +33,7 @@
     "jest-environment-node": "^29.4.1",
     "nx": "17.1.3",
     "prettier": "^2.6.2",
+    "prisma": "^5.7.0",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.2.2"
