Add integration test

--- a/libs/users/project.json
+++ b/libs/users/project.json
@@ -17,6 +17,13 @@
       "options": {
         "jestConfig": "libs/users/jest.config.ts"
       }
+    },
+    "test-int": {
+      "executor": "@nx/jest:jest",
+      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
+      "options": {
+        "jestConfig": "libs/users/jest.int.config.ts"
+      }
     }
   },
   "tags": []
