--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/express": "~4.17.13",
     "@types/jest": "^29.4.0",
     "@types/node": "~18.7.1",
+    "@types/supertest": "^2.0.16",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
     "@typescript-eslint/parser": "^6.9.1",
     "esbuild": "^0.19.2",
@@ -34,6 +35,7 @@
     "nx": "17.1.3",
     "prettier": "^2.6.2",
     "prisma": "^5.7.0",
+    "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.2.2"
